<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/exercises"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/caloriesLabel"
        app:layout_constraintEnd_toEndOf="@+id/weightText"
        app:layout_constraintStart_toEndOf="@+id/weightText"
        app:layout_constraintTop_toBottomOf="@+id/exercises" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/weightLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/weight"
        app:layout_constraintStart_toStartOf="@+id/exTimeText" />

    <TextView
        android:id="@+id/exTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="9dp"
        android:text="@string/exerciseTimeLabel"
        app:layout_constraintBottom_toBottomOf="@+id/exTime"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/weightHint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/exTimeText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="@+id/weight" />

    <EditText
        android:id="@+id/exTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/exerciseTimeHint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:onClick="calculate"
        android:text="@string/calcBtnLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/total"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="212dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>